@@ -27,7 +27,6 @@ import java.util.Map;
 import net.sourceforge.atunes.gui.OSXAdapter;
 import net.sourceforge.atunes.gui.frame.Frame;
 import net.sourceforge.atunes.gui.lookandfeel.AbstractLookAndFeel;
-import net.sourceforge.atunes.gui.lookandfeel.nimbus.NimbusLookAndFeel;
 import net.sourceforge.atunes.gui.lookandfeel.substance.SubstanceLookAndFeel;
 import net.sourceforge.atunes.gui.lookandfeel.system.OSXLookAndFeel;
 import net.sourceforge.atunes.kernel.OperatingSystem;
@@ -35,7 +34,6 @@ import net.sourceforge.atunes.kernel.modules.cdripper.cdda2wav.AbstractCdToWavCo
 import net.sourceforge.atunes.kernel.modules.cdripper.cdda2wav.Cdparanoia;
 import net.sourceforge.atunes.kernel.modules.player.AbstractPlayerEngine;
 import net.sourceforge.atunes.kernel.modules.player.mplayer.MPlayerEngine;
-import net.sourceforge.atunes.misc.SystemProperties;
 import net.sourceforge.atunes.misc.log.LogCategories;
 import net.sourceforge.atunes.misc.log.Logger;
 import net.sourceforge.atunes.utils.StringUtils;
@@ -103,12 +101,6 @@ public class MacOSXOperatingSystem extends OperatingSystemAdapter {
 	    Map<String, Class<? extends AbstractLookAndFeel>> lookAndFeels = new HashMap<String, Class<? extends AbstractLookAndFeel>>();
         lookAndFeels.put(SubstanceLookAndFeel.SUBSTANCE, SubstanceLookAndFeel.class);
         lookAndFeels.put(OSXLookAndFeel.SYSTEM, OSXLookAndFeel.class);
-
-        // Nimbus look and feel (only 1.6.10 or later)
-        if (SystemProperties.IS_JAVA_6_UPDATE_10_OR_LATER) {
-            lookAndFeels.put(NimbusLookAndFeel.NIMBUS, NimbusLookAndFeel.class);
-        }
-        
         return lookAndFeels;
 	}
 
